--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev:server": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bull": "^3.12.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "nodemailer": "^6.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.1",
