--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "nodemon src/server.js"
+    "dev": "npm-run-all -p dev:*",
+    "dev:server": "nodemon src/server.js",
+    "dev:queue": "nodemon src/queue.js"
   },
   "dependencies": {
     "bull": "^3.12.1",
+    "bull-board": "^0.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemailer": "^6.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.1",
+    "npm-run-all": "^4.1.5",
     "sucrase": "^3.10.1"
   }
 }
